@@ -78,7 +78,7 @@ void		cb_swap_color_changed (GnomeColorPicker *cp, guint r, guint g, guint b,
 				      guint a, gpointer data);
 #endif
 
-void		cb_row_selected (GtkTreeView *tree, gpointer data);
+void		cb_row_selected (GtkTreeSelection *selection, gpointer data);
 
 #if 0				
 gint		cb_right_click (ETree *tree, int row, ETreePath path,
