@@ -1,5 +1,17 @@
 2001-09-30  Kevin Vandersloot <kfv101@psu.edu>
 
+	* proctable.c: get sorting right and store the process info
+	for each row
+
+	* interface.c: bring back sensitivity changing
+
+	* infoview.c: bring back getting and displauing the info
+
+	* callbacks.c: save and restore the highlighted disk. Handle
+	row selections correctly now
+
+2001-09-30  Kevin Vandersloot <kfv101@psu.edu>
+
 	* interface.c: bring back the disks list among other things
 
 	* callbacks.c: update the disk list.
